--- a/styleprob1.css
+++ b/styleprob1.css
@@ -8,47 +8,104 @@ body{
     align-items: center;
     padding:0;
     margin:0;
-    
+    color: hsl(228, 12%, 48%);
 }
 
 .container{
     display:flex;
-    width:450px;
-    height:450px;
+    width:calc((600/1440)*100%);
+    height:calc((450/800)*100%);
     border:transparent;
     border-radius: 10px;
     justify-content: left;
     overflow: hidden;
+
+
+    
     /* background-image:url('images/image-product-desktop.jpg');
     background-size: cover;
     background-position: center center;
     width:100px;
     height:100px; */
 }
+
+@media (max-width:376px)
+{
+    .container{
+
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+}
 .half
 {
     display:inline-block;
-    height:auto;
+    
+    flex:1;
 }
 
 #part-1 img
 {
     display:block;
     
-     width:100%px;
+     width:100%;
      height:100%;
    
 }
 #part-2
 {
     background-color: hsl(0, 0%, 100%);
-    padding:24px;
+ 
+    flex-direction: column;
+    align-content: space-around;
+    width:100%;
+    height:100%;
+    margin:0px;
+   
 }
 
 .content
 {
     /* font-family: 'Fraunces', serif; */
     font-family: 'Montserrat', sans-serif;
-    color:grey;
+    
+    padding:16px;
+    padding-left: 34px;
+    padding-bottom: 5px;
+    margin:0;
 }
+
+#item-2{
+    font-size: 34px;
+    font-family: 'Fraunces',sans-serif;
+    color:black;
+}
+
+#item-4{
+    font-family: 'Fraunces',sans-serif;
+    color:green;
+    font-size: 28px;
+}
+#item-4 s{
+    color: hsl(228, 12%, 48%);
+    font-size: 14px;
+    position:relative;
+    bottom:5px;
+    left:5px;
+}
+#item-5 button{
+    color:white;
+    background-color: hsl(158, 36%, 37%);
+    width:93%;
+    padding:15px;
+    border:transparent;
+    border-radius: 10px;
+}
+#item-5 button:hover
+{
+    background-color: hsl(212, 21%, 14%);
+    cursor:pointer;
+}
+
 
