--- a/styleprob1.css
+++ b/styleprob1.css
@@ -1,7 +1,5 @@
 body{
-    font-size: 14px;
-    width:1440px;
-    height:100vh;
+    height:100vh;   
     background-color: hsl(30, 38%, 92%);
     display:flex;
     justify-content:center;
@@ -10,107 +8,92 @@ body{
     margin:0;
     color: hsl(228, 12%, 48%);
 }
-
 .container{
     display:flex;
-    width:calc((600/1440)*100%);
-    height:calc((450/800)*100%);
-    border:transparent;
+    width: 45%;
+    height: 60%;
     border-radius: 10px;
-    justify-content: left;
-    overflow: hidden;
-    flex-wrap: wrap;
-
-    
-    /* background-image:url('images/image-product-desktop.jpg');
-    background-size: cover;
-    background-position: center center;
-    width:100px;
-    height:100px; */
+    overflow:hidden
 }
-
-@media (max-width:376px)
-{
-    .container{
-
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-    }
+#part-1{
+    width: 50%;
 }
-.half
-{
-    display:inline-block;
-    
-    flex:1;
-}
-
-#part-1 img
-{
-    display:block;
-    
-     width:100%;
-     height:100%;
-   
+#part-1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 #part-2
 {
+    width:50%;
     background-color: hsl(0, 0%, 100%);
- 
+    display: flex;
     flex-direction: column;
-    align-content: space-around;
-    width:100%;
-    height:100%;
-    margin:0px;
-   
+    justify-content: center;
+    gap: 1rem;
+  
 }
-
 .content
 {
-    /* font-family: 'Fraunces', serif; */
     font-family: 'Montserrat', sans-serif;
-    
-    padding:16px;
-    padding-left: 34px;
-    padding-bottom: 5px;
-    margin:0;
+    padding:0 2rem;
 }
-
 #item-2{
-    font-size: 34px;
+    font-size: 2.5rem;
     font-family: 'Fraunces',sans-serif;
     color:black;
+    line-height: 2.5rem;
 }
-
+#item-3{
+    line-height: 1.5rem;
+}
 #item-4{
     font-family: 'Fraunces',sans-serif;
     color:green;
-    font-size: 28px;
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    gap: 2rem;
 }
 #item-4 s{
     color: hsl(228, 12%, 48%);
-    font-size: 14px;
-    position:relative;
-    bottom:5px;
-    left:5px;
+    font-size: 1rem;
 }
 #item-5 button{
     color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    font-weight: 700;
     background-color: hsl(158, 36%, 37%);
-    width:93%;
-    padding:15px;
-    border:transparent;
+    width: 100%;
+    border:none;
     border-radius: 10px;
-    font-size: 15px;
+    padding: 1rem;
+    transition: 500ms ease-in-out;
 }
 #item-5 button:hover
 {
     background-color: hsl(212, 21%, 14%);
     cursor:pointer;
 }
-#item-5 button img
-{
-    margin-right: 4px;
+
+@media only screen and (max-width: 768px) {
+    .container{
+        width: 90%;
+        height: 90%;
+        flex-direction: column;
+    }
+    #part-1{
+        width: 100%;
+        height: 40%;
+    }
+    #part-2{
+        width: 100%;
+        height: 60%;
+    }
+    html{
+        font-size: 12px;
+    }
 }
-
-
